<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:id="@+id/layout">

    <RelativeLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/colorWhite"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/txtHearderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        android:layout_below="@+id/llTop">

        <LinearLayout
            android:id="@+id/llForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/forgot_password" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/_20sdp">
                <TextView
                    android:id="@+id/txtHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/HeaderText"
                    android:gravity="center"
                    android:textSize="@dimen/_20sdp"
                    android:text="@string/str_forgot_your_password"
                    android:layout_alignParentTop="true"/>
                <TextView
                    android:id="@+id/txtMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:text="@string/str_forgot_msg"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@+id/txtHeader"/>
                <LinearLayout
                    android:id="@+id/LLEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_10sdp"
                    android:layout_below="@+id/txtMsg">

                    <ImageView
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_email"
                        app:tint="@color/colorTextHint"/>

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:hint="@string/str_email"
                        android:textColorHint="@color/colorTextHint"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:background="@null"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignParentBottom="true">
                    <TextView
                        android:id="@+id/txtButtonResetPassword"
                        style="@style/ButtonText"
                        android:text="@string/str_reset_password"
                        android:background="@drawable/bg_card_white" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPasswordReset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/send" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/_20sdp">
                <TextView
                    android:id="@+id/txtHeader1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/HeaderText"
                    android:gravity="center"
                    android:textSize="@dimen/_20sdp"
                    android:text="@string/str_reset_title"
                    android:layout_alignParentTop="true"/>
                <TextView
                    android:id="@+id/txtMsg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:text="@string/str_reset_msg"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@+id/txtHeader1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                      android:layout_alignParentBottom="true">
                    <TextView
                        android:id="@+id/txtButtonSetNewPassword"
                        style="@style/ButtonText"
                        android:text="@string/str_set_a_new_password"
                        android:background="@drawable/bg_card_white" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>