<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:id="@+id/layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/graph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="Welcome! \n Join with Us &amp; Enjoy Healthy Life"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_card_gray"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:id="@+id/txtLogin"
                        style="@style/ButtonText"
                        android:text="@string/str_login"
                        android:background="@drawable/bg_card_white"/>
                    <TextView
                        android:id="@+id/txtSignUp"
                        style="@style/ButtonText"
                        android:text="@string/str_signup"
                        android:visibility="gone"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>