<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/txtHearderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTop"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login" />

        <TextView
            android:id="@+id/txtHeader"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_welcome_back" />

        <LinearLayout
            android:id="@+id/LLUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_username"
                app:tint="@color/colorTextHint" />

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:hint="User Name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_12sdp" />
            <!--nikunj@aseuminfotech.com-->
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LLPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_lock"
                app:tint="@color/colorTextHint" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/cbshowpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/colorWhite"
            android:fontFamily="@font/poppins_regular"
            android:text="Show Password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp" />

        <RelativeLayout
            android:id="@+id/RLForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="visible">

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="right"
                android:text="@string/str_forgot_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LLLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="visible">

            <TextView
                android:id="@+id/txtButtonLogin"
                style="@style/ButtonText"
                android:background="@drawable/bg_card_white"
                android:text="@string/str_login" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLDontHaveAcc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/str_donot_have_account"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/str_signup"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>